# SignificantBaitNoBait

./: 5f.fastq  5r.fastq  8f.fastq  8r.fastq  AllTest.txt  Bait.fasta  BaitMatrix.txt  CMakeLists.txt  Count.cpp  Count.h  CountInFastq.cpp  CountInFastq.h  CreateMatrix.cpp  CreateMatrix.h  FoldChange.cpp  FoldChange.h  Head.arff  HeadAll.txt  HeadNotContam5.fasta  HeadNotContam8.fasta  HeadSortedJelly5.txt  HeadSortedJelly8.txt  HeadTrial.fastq  InputTest.txt  Kmer5.txt  Kmer8.txt  KmerMerge.cpp  KmerMerge.h  KmerTest.fasta  Makefile  Merge.cpp  Merge.h  Merge1.fasta  Merge2.fasta  Merged.fasta  MergedKmers5_8.txt  NoBaitMatrix.txt  NoBait_Matrix.txt  NotContamTest.fasta  OutputMatrix5.txt  (+9 more)
